<resources>
    <string name="app_name">Portfolio</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="moviesButton">Movies App</string>
    <string name="alexandriaButton">Alexandria</string>
    <string name="footballScores">Football scores</string>
    <string name="buildButton">Build it Bigger</string>
    <string name="xyzButton">XYZ Reader</string>
    <string name="capstoneButton">Capstone: My Own App</string>
</resources>
