<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".Portfolio"
    android:background="#e3f2fd">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:id="@+id/layout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="My Nanodegree Apps"
            android:id="@+id/textView2"
            android:layout_gravity="center_horizontal" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"></LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/moviesButton"
            android:id="@+id/movieButton"
            android:layout_gravity="center_horizontal"
            android:background="#F08C35"
            android:layout_marginTop="10dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/alexandriaButton"
            android:id="@+id/alexandriaButton"
            android:layout_gravity="center_horizontal"
            android:background="#F08C35"
            android:layout_marginTop="5dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/footballScores"
            android:id="@+id/footballButton"
            android:layout_gravity="center_horizontal"
            android:background="#F08C35"
            android:layout_marginTop="5dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buildButton"
            android:id="@+id/buildButton"
            android:layout_gravity="center_horizontal"
            android:background="#F08C35"
            android:layout_marginTop="5dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/xyzButton"
            android:id="@+id/xyzButton"
            android:layout_gravity="center_horizontal"
            android:background="#F08C35"
            android:layout_marginTop="5dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/capstoneButton"
            android:id="@+id/capstoneButton"
            android:layout_gravity="center_horizontal"
            android:background="#FF1744"
            android:layout_marginTop="5dp"/>
    </LinearLayout>
</RelativeLayout>
